--- a/src/JTML/chX-jtml.tex
+++ b/src/JTML/chX-jtml.tex
@@ -36,7 +36,7 @@ This paper seeks to answer the following three questions: (1) How well does a co
 
 \section{Methods}
 
-Data from seven previously reported TKA kinematics studies were used for this study \cite{kefalaAssessmentKneeKinematics2017,palm-vlasakMinimalVariationTop2022,okamotoVivoKneeKinematics2011,watanabeKneeKinematicsAnterior2013,jennyREGISTRATIONKNEEKINEMATICS2015,watanabeInvivoKinematicsHighflex2016,scottCanTotalKnee2016}.
+Data from seven previously reported TKA kinematics studies were used for this study \cite{kefalaAssessmentKneeKinematics2017,palm-vlasakMinimalVariationTop2022,okamotoVivoKneeKinematics2011,watanabeKneeKinematicsAnterior2013,jennyRegistrationKneeKinematics2015,watanabeInvivoKinematicsHighflex2016,scottCanTotalKnee2016}.
 These studies utilized single-plane fluoroscopy or flat-panel imaging to measure tibiofemoral implant kinematics during lunge, squat, kneel, and stair climbing movements from 8248 images in 71 patients with implants from 7 manufacturers, including 36 distinct implants. From each of these studies, the following information was collected: (1) deidentified radiographic images, (2) x-ray calibration files, (3) manufacturer-supplied tibial and femoral implant surface geometry files (STL format), and (4) human supervised kinematics for the tibial and femoral components in each of the images. CNNs were trained with images from six of the studies using a transfer-learning paradigm with an open-source network \cite{wangDeepHighResolutionRepresentation2020}. CNN performance was tested using two image collections: a standard test set including images from the six studies used for training and a wholly naïve test set using images from the seventh study, where the imaging equipment and implants were different from anything used in training (Fig. \ref{fig:dataset}). We used both test image sets to compare human-supervised kinematics with autonomously measured kinematics. Separately, two independent groups utilized our software to assess the accuracy of TKA kinematics measurements compared to their previously reported reference standard systems using RSA \cite{teeterQuantificationVivoImplant2013} or motion capture \cite{daemsValidationThreedimensionalTotal2016}.
 
 \begin{figure}[h]
@@ -47,7 +47,11 @@ These studies utilized single-plane fluoroscopy or flat-panel imaging to measure
 \end{figure}
 
 \subsection{Image Segmentation}
-Images were resized and padded to 1024x1024 pixels. Images containing bilateral implants had the contralateral knee cropped from the image. Segmentation labels were created by taking the human-supervised kinematics for each implant and generating a flat-shaded ground-truth projection image (Fig. \ref{fig:seg-labels}). Two neural networks \cite{wangDeepHighResolutionRepresentation2020} were trained to segment the tibial and femoral implants, respectively, from the x-ray images. Each network was trained using a random 6284/1572 (80/20) training/validation split. Augmentations were introduced in the training pipeline to improve the network's generalization to new implants and implant types \cite{buslaevAlbumentationsFastFlexible2020}. Each neural network was trained on an NVIDIA A100 GPU for 30 epochs. The performance of the segmentation networks was measured using the Jaccard Index \cite{jaccardDISTRIBUTIONFLORAALPINE1912}. This calculates the intersection between the estimated and ground-truth pixels over the union of both sets of pixels. The ideal Jaccard index is 1.
+Images were resized and padded to 1024x1024 pixels. Images containing bilateral implants had the contralateral knee cropped from the image.
+Segmentation labels were created by taking the human-supervised kinematics for each implant and generating a flat-shaded ground-truth projection image (Fig. \ref{fig:seg-labels}).
+Two neural networks \cite{wangDeepHighResolutionRepresentation2020} were trained to segment the tibial and femoral implants, respectively, from the x-ray images.
+Each network was trained using a random 6284/1572 (80/20) training/validation split. Augmentations were introduced in the training pipeline to improve the network's generalization to new implants and implant types \cite{buslaevAlbumentationsFastFlexible2020}.
+Each neural network was trained on an NVIDIA A100 GPU for 30 epochs. The performance of the segmentation networks was measured using the Jaccard Index \cite{jaccardDistributionFloraAlpine1912}. This calculates the intersection between the estimated and ground-truth pixels over the union of both sets of pixels. The ideal Jaccard index is 1.
 
 \begin{figure*}[h]
 	\centering
